Cros splitscreen: Fix crash when setting opacity.

It's possible that when setting the opacity of the black scrim, the opacity is
a very small negative value. Set it to zero in this case.

Bug: 835900
Change-Id: Ia3b082e86cb5cca25987023a9a6f46625865b335
Reviewed-on: https://chromium-review.googlesource.com/1024243
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554474}
Former-commit-id: 309a72e6883b7f09617bdc330db1305045bf6e81